2002-05-21  jacob berkman  <jacob@ximian.com>

	* applier.c (render_to_screen): use a gc for the pixmap not the
	root window
	(bg_applier_get_preview_widget): don't create the pixmap until we
	are realized
	(make_root_pixmap): use gdk_get_display(), not getenv ("DISPLAY"),
	and set the colormap for our GdkPixmap so we can draw on it
	(preview_realized_cb): create the pixmap here, and set it on our
	GtkImage

	fixes #73496

2002-05-16  jacob berkman  <jacob@ximian.com>

	* applier.c (bg_applier_apply_prefs): don't spew a warning when
	files can't be loaded (helps fix #76993)

2002-04-19  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=79149
	* preferences.c (bg_preferences_clone) : fix leaks and use
	  gdk_color_free because some wiseguy thought GdkColours should use
	  memchunks.
	(bg_preferences_load) : ditto.
	(bg_preferences_merge_entry) : ditto.
	(read_color_from_string) : ditto.
	(bg_preferences_finalize) : ditto. clean out pointers to protect
	  against multiple calls.

2002-04-17  Rachel Hestilow  <hestilow@ximian.com>

	* applier.c (need_root_pixmap_p): Return TRUE if pixmap is NULL.
	(create_pixmap): Only set pixmap if not already set.

2002-04-17  Anders Carlsson  <andersca@gnu.org>

	* preferences.c: (bg_preferences_finalize), (bg_preferences_load):
	Plug leaks. Sigh.
	
2002-04-07  Rachel Hestilow  <hestilow@ximian.com>

	* applier.c (bg_applier_get_preview_widget): Connect to "realize"
	on preview.
	(preview_realized_cb): Added function to initialize preview pixmap.

2002-03-28  Richard Hestilow  <hestilow@ximian.com>

	* applier.c (bg_applier_set_prop): Only set size for preview modes.

2002-03-28  Richard Hestilow  <hestilow@ximian.com>

	* applier.c (MONITOR_CONTENTS_WIDTH, MONITOR_CONTENTS_HEIGHT):
	Rename to _DEFAULT_WIDTH, _DEFAULT_HEIGHT.
	(draw_disabled_message): Accept width and height as variables.
	(bg_applier_class_init): Install props preview_width, preview_height.